Cambios + operadores + igual
Faltan los negativos y el menos hay veces que no va

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,7 +42,7 @@ button {
 
 }
 
-button:active:not(.op){
+button:active:not(.op,.inactive){
 
   filter:brightness(3);
 
@@ -61,7 +61,7 @@ button:active:not(.op){
 .inactive{
 
   filter:brightness(0.7);
-
+  cursor: not-allowed;
 }
 
 .long{
